The final touches - update fonts - fix annou/trending row column mix - adjust spacing where needed

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: Tahoma, sans-serif;
 }
 
 /* Main Containers */
@@ -36,8 +37,6 @@
 .content {
   display: grid;
   grid-template-columns: 3fr 1fr;
-  background-color: ;
-  /* TODO: is this needed? */
   grid-template-rows: repeat(4, 1fr);
   background-color: #e2e8f0;
   grid-column: 2 / 3;
@@ -54,7 +53,7 @@
 
 .user-nav {
   display: grid;
-  grid-template-columns: 40px 40px 150px;
+  grid-template-columns: 40px 40px 160px;
   place-items: center;
   justify-self: end;
   gap: 25px;
@@ -135,14 +134,14 @@
 
 .announcements {
   grid-column: 2;
-  grid-row: 1 / 3;
+  grid-row: 1 / 2;
   margin-top: 24px;
 }
 
 .trending {
-  /* TODO: display flex */
+  margin-top: 12px;
   grid-column: 2;
-  grid-row: 3 / 5;
+  grid-row: 2 / 5;
 }
 
 .cards {
